# stock-fisher

./: .gitignore  README.md  end-goal-instructions  notebook.ipynb  pyproject.toml
data/output/: titled_tuesday.parquet
src/stock_fisher/: __init__.py  config.py  dataset.py
src/stock_fisher/cli/: __init__.py  dataset.py  train.py
src/stock_fisher/features/: __init__.py  base.py  labels.py  tier0.py  tier1.py  tier2.py
src/stock_fisher/ingestion/: __init__.py  cache.py  client.py  models.py  tournament.py
src/stock_fisher/modeling/: __init__.py  data.py  evaluation.py  models.py  train.py
tests/: conftest.py  test_dataset.py  test_features.py  test_labels.py  test_leakage.py
